<resources>
    <string name="app_name">垃圾分类识别系统</string>

    <!-- 顶部标题栏 -->
    <string name="top_title_main">垃圾分类识别系统</string>
    <string name="top_title_import">导入信息</string>
    <string name="top_title_recognition">识别结果</string>

    <!-- 首页 -->
    <string name="setting">设置</string>
    <string name="_import">导入</string>
    <string name="recognition">去识别</string>

    <!-- 导入信息 -->
    <string name="back">返回</string>
    <string name="select_file">选择文件</string>
    <string name="delete_book">删除图书</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="previous_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="page">页</string>
    <string name="jump">跳转</string>
    <string name="current_bind">当前绑定</string>
    <string name="bind_success">绑定成功</string>
    <string name="imported_list">已导入的信息</string>
    <string name="gread">测试结果</string>
    <string name="alert_true">正确</string>
    <string name="alert_false">错误</string>
    <!-- table -->
    <string name="table_no">序号</string>
    <string name="table_img">图片</string>
    <string name="table_name">垃圾名称</string>
    <string name="table_isbn">编号</string>
    <string name="table_publish">备注</string>
    <string name="table_publishtime">添加时间</string>
    <string name="table_category">类别</string>
    <string name="table_bindtime">绑定次数</string>
    <string name="table_error">正确数量</string>

    <!-- 识别结果 -->
    <string name="current_category">当前类别：</string>
    <string name="change_category">更换类别</string>
    <string name="choose_category">选择类别</string>
    <string name="choose_grade">测试结束</string>


    <!-- 设置 -->
    <string name="system_voice">系统音量</string>

</resources>
